--- a/index.html
+++ b/index.html
@@ -1,212 +1,171 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Platform.Digital</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
+<head>
+	<title>Platform.Digital</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo_2.svg" alt="" /></span>
-						<h1>Nossa Experiência</h1>
-						<p>
-							A computação em nuvem reduziu drasticamente os custos de engenharia e a
-							eficácia de entrega na última década. No entanto, novos sistemas e
-							funcionalidades ainda precisam de lead-times de semanas ou poucos
-							meses para uma versão de protótipo (MVP),
-							e os custos operacionais continuam a ser gerenciados de forma ineficiente.
-							Formas modernas de computação em nuvem, incluindo arquitetura Serverless,
-							são nosso maior foco.
-						</p>
-						<p>
-							Temos uma reputação globalmente respeitada por nossas habilidades e experiência em Serverless e
-							desenvolvimento de software, incluindo Agile / Lean e DevOps.
-							Oferecemos um serviço de consultoria de nível de especialista para ajudar as empresas a
-							reverem a sua estratégia de custo e arquitetura e o impacto na sua organização.
-							Além disso, oferecemos recursos práticos para colaborar com equipes que
-							trabalham com AWS, Azure, Google Cloud, OpenWhisk entre outros serviços na nuvem.
-						</p>
-					</header>
+		<!-- Header -->
+		<header id="header" class="alt">
+			<span class="logo"><img src="images/logo_2.svg" alt="" /></span>
+			<h1></h1>
+			<p>
+			</p>
+		</header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro" class="active">Principal</a></li>
-							<li><a href="#first">Como</a></li>
-							<li><a href="#second">Serviços</a></li>
-							<li><a href="#cta">Contato</a></li>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro" class="active">Principal</a></li>
+				<li><a href="#first">Como</a></li>
+				<li><a href="#second">Serviços</a></li>
+				<li><a href="#cta">Contato</a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Introduction -->
+			<section id="intro" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2></h2>
+						</header>
+						<p></p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Saiba mais...</a></li>
 						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Custos até 85% menores</h2>
-										</header>
-										<p>Utilizamos técnicas que podem garantir uma diminuição de até 85% dos seus
-										custos totais em infra-estrutura na nuvem, podemos ajudar sua empresa com serviços que
-										vão desde da consultoria especializada em DevOps, Serverless,
-											High Performance Computing, Mentoring e Execução.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Saiba mais...</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/cloud-computing-8.svg" alt="" /></span>
-								</div>
-							</section>
-
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Como fazemos</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Serverless</h3>
-										<p>
-											São apps como Backend como um Serviço (BaaS) ou Função como um Serviço ou (FaaS).
-											Com o comportamento de Apps voltadas ao front-end, removemos a
-											necessidade do tradicional servidor "sempre ligado".
-
-											Podemos reduzir significativamente o custo operacional e a complexidade ao
-											custo das dependências dos fornecedores.
-										</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>DevOps Culture</h3>
-										<p>
-											DevOps tornou-se possível devido a uma combinação de novas
-											ferramentas de operações e práticas ágeis.
-											Mesmo com as melhores ferramentas, DevOps é apenas mais um buzzword
-											se você não tem a cultura certa.
-
-											Desenvolvemos métodos, já testados em grandes empresas, para ajudar
-											você também nessa mudança cultural.
-										</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Lean StartUP</h3>
-										<p>Utilizamos métodos baseados no Lean Startup, e ensinamos como essas
-											empresas fazem para melhorar praticamente tudo o que fazemos.
-											"Como podemos aprender mais rapidamente
-											o que funciona e descartar o que não funciona?</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Saiba Mais...</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Bla bla bla</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>70%</strong> Otimização de custos
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>85%</strong> Otimização de custos
-									</li>
-									<li class="style4">
-										<span class="icon fa-diamond"></span>
-										<strong>Lean StartUP</strong> Torne sua empresa ágil
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button special">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
 					</div>
+					<span class="image"><img src="images/cloud-computing-8.svg" alt="" /></span>
+				</div>
+			</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+			<!-- First Section -->
+			<section id="first" class="main special">
+				<header class="major">
+					<h2>Como fazemos</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<span class="icon major style1 fa-code"></span>
+						<h3></h3>
+						<p>
 
-			</div>
+						</p>
+					</li>
+					<li>
+						<span class="icon major style3 fa-copy"></span>
+						<h3></h3>
+						<p>
+						</p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-diamond"></span>
+						<h3></h3>
+						<p></p>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions">
+						<li><a href="generic.html" class="button"></a></li>
+					</ul>
+				</footer>
+			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<!-- Second Section -->
+			<section id="second" class="main special">
+				<header class="major">
+					<h2></h2>
+					<p></p>
+				</header>
+				<ul class="statistics">
+					<li class="style1">
+						<span class="icon fa-code-fork"></span>
+						<strong></strong>
+					</li>
+					<li class="style3">
+						<span class="icon fa-signal"></span>
+						<strong></strong>
+					</li>
+					<li class="style4">
+						<span class="icon fa-diamond"></span>
+						<strong></strong>
+					</li>
+				</ul>
+				<p class="content"></p>
+				<footer class="major">
+					<ul class="actions">
+						<li><a href="generic.html" class="button"></a></li>
+					</ul>
+				</footer>
+			</section>
 
-	</body>
+			<!-- Get Started -->
+			<section id="cta" class="main special">
+				<header class="major">
+					<h2></h2>
+					<p></p>
+				</header>
+				<footer class="major">
+					<ul class="actions">
+						<li><a href="generic.html" class="button special"></a></li>
+						<li><a href="generic.html" class="button"></a></li>
+					</ul>
+				</footer>
+			</section>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2></h2>
+				<p></p>
+				<ul class="actions">
+					<li><a href="generic.html" class="button"></a></li>
+				</ul>
+			</section>
+			<section>
+				<h2></h2>
+				<dl class="alt">
+					<dt></dt>
+					<dd></dd>
+					<dt></dt>
+					<dd></dd>
+					<dt></dt>
+					<dd><a href="#"></a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+				</ul>
+			</section>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+
+</body>
 </html>
